# ncnn-inference

./: README.md
inference_test/: CMakeLists.txt  env.bat  vs_create_projectname.bat  vs_run_projectname.bat
inference_test/include/: common.h  inference.h
inference_test/phone_api_cmake/: CMakeLists.txt
inference_test/src/: CMakeLists.txt  inference.cpp  main.cpp
ncnn-master/: env.bat  make_ncnn.bat
ncnn-master/src/: datareader.cpp  net.cpp
